--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <title>Website</title>
+    <title>Electronic Publishing</title>
 </head>
 <body>
     <h1>Website</h1>
